--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,5 @@
-<%= link_to "BillBoards", root_path %>
-<%= link_to "All Artists", artists_path %>
-<hr />
+<div class="ui two item menu">
+<%= link_to "BillBoards", root_path, class: "item header" %>
+<%= link_to "All Artists", artists_path, class: "item header" %>
+</div>
+<br />
