--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -1,9 +1,10 @@
 <h1><%= @artist.id ? 'Edit Artist' : 'Create Artist' %></h1>
-<hr />
-<%= form_for @artist do |f| %>
+<br />
+<%= form_with(model: artist, local: true, class: "ui form") do |f| %>
+  <div class="field">
   <%= f.label :name %>
   <%= f.text_field :name, required: true, autofocus: true %>
+  </div>
   <br />
-  <%= f.submit %>
 <% end %>
 <%= link_to "Back", artists_path %>
