--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -5,7 +5,7 @@
     <% end %>
 <br >
 <hr />
-<%= link_to 'Add Song', songs_path %>
+<%= link_to 'Add Song', songs_list_path(@list) %>
 <br />
 <%= link_to 'Edit List', edit_list_path(@list) %>
 <br />
